--- a/cursoNodeYoutube/views/layouts/main.handlebars
+++ b/cursoNodeYoutube/views/layouts/main.handlebars
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Postagens NodeJS</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <title>Blog NodeJS</title>
 </head>
-<body>
-    {{{ body }}}
+<body class="bg-light">
+    {{>_navbar }}
+    {{>_msg }}
+    <div class="container mt-4 ">
+        {{{ body }}}
+    </div>
 </body>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="/js/bootstrap.js"></script>
 </html>
