--- a/cursoNodeYoutube/views/admin/postagensadd.handlebars
+++ b/cursoNodeYoutube/views/admin/postagensadd.handlebars
@@ -3,7 +3,7 @@
     {{else }}
 {{/each}}
 <h2>Nova Postagem</h2>
-<form action="" method="post">
+<form action="/admin/postagens/new" method="post">
   <div class="mb-3 input-group-sm w-25">
     <label for="nome" class="form-label">Titulo</label>
     <input type="text" class="form-control input-group-sm border-primary-subtle" id="titulo" name="titulo">
@@ -12,7 +12,7 @@
     <label for="slug" class="form-label">Categoria</label>
     <select type="text" class="form-control border-primary-subtle" id="categoria" name="categoria">
         {{#each listagemCategorias}}
-            <option value="{{ slug }}">{{ slug }}</option>
+            <option value="{{ nome }}">{{ nome }}</option>
             {{else }}
         {{/each}}
     </select>
