--- a/cursoNodeYoutube/views/admin/categorias.handlebars
+++ b/cursoNodeYoutube/views/admin/categorias.handlebars
@@ -15,4 +15,4 @@
 
 
 
-<a href="/admin/categorias/add"><button class="btn btn-success mb-10">Nova categoria</button></a>
+<a href="/admin/categorias/add"><button class="btn btn-success mb-10 mb-5">Nova categoria</button></a>
