--- a/cursoNodeYoutube/views/layouts/main.handlebars
+++ b/cursoNodeYoutube/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bootstrap.css">
-    <title>Blog NodeJS</title>
+    <link rel="shortcut icon" href="/img/favicon.svg" type="image/x-icon">
+    <title>Posts JS</title>
 </head>
 <body class="bg-light">
     {{>_navbar }}
