--- a/cursoNodeYoutube/views/partials/_navbar.handlebars
+++ b/cursoNodeYoutube/views/partials/_navbar.handlebars
@@ -1,12 +1,12 @@
 <ul class="nav bg-dark">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
+    <a class="nav-link active" aria-current="page" href="/">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="/categorias">Categorias</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#">Login</a>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
