add authenticate with passport

--- a/cursoNodeYoutube/views/index.handlebars
+++ b/cursoNodeYoutube/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1 class="display-4">Bem vindo,</h1>
   <p class="lead">Este projeto foi desenvolvido no curso de NodeJS com o objetivo de um blog de postagens.</p>
-  <a class="btn btn-primary btn-md mb-5" href="#" role="button">Cadastre-se</a>
+  <a class="btn btn-primary btn-md mb-5" href="/usuario/cadastro" role="button">Cadastre-se</a>
   <hr class="my-2">
 </div>
 
