--- a/cursoNodeYoutube/views/partials/_navbar.handlebars
+++ b/cursoNodeYoutube/views/partials/_navbar.handlebars
@@ -5,9 +5,16 @@
   <li class="nav-item">
     <a class="nav-link" href="/categorias">Categorias</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Login</a>
-  </li>
+  {{#if user}}
+    <li class="nav-item">
+        <a class="nav-link" href="/usuario/logout">Logout</a>
+    </li>
+  {{else }}
+    <li class="nav-item">
+      <a class="nav-link" href="/usuario/login">Login</a>
+   </li>
+  {{/if }}
+
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
